Fix site-cover and nav logo z-index interference

--- a/app/assets/stylesheets/main_nav.scss
+++ b/app/assets/stylesheets/main_nav.scss
@@ -38,7 +38,7 @@ body.sticky-shrinknav-wrapper .sticky-shrinknav-header .sticky-shrinknav-header-
   position: fixed;
   left: 40%;
   color: #fefefe;
-  z-index: 20;
+  z-index: 25;
 }
 
 .sticky-shrinknav-header-title a {
